[package]
name = "codegraph-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Graph data structures and operations for CodeGraph"

[dependencies]
codegraph-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

# SurrealDB support (optional, default on via feature flag)
surrealdb = { version = "2.2", optional = true }
dotenvy = { version = "0.15", optional = true }

[features]
default = []
surrealdb = ["dep:surrealdb", "dep:dotenvy"]

[[bin]]
name = "surreal_smoke_test"
path = "src/bin/surreal_smoke_test.rs"
required-features = ["surrealdb"]
