[package]
name = "codegraph-lb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Intelligent load balancing for CodeGraph: algorithms, health checks, failover, traffic shaping"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
governor = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

[features]
default = []
