[package]
name = "codegraph-mcp-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Solita CodeGraph"]
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
codegraph-mcp-core = { path = "../codegraph-mcp-core" }
codegraph-core = { path = "../codegraph-core" }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
