[package]
name = "codegraph-napi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["local"]
local = ["codegraph-vector/faiss"]
cloud-jina = ["codegraph-vector/jina"]
cloud-surrealdb = ["surrealdb", "codegraph-graph/surrealdb"]
cloud = ["cloud-jina", "cloud-surrealdb"]
full = ["local", "cloud"]

[dependencies]
# NAPI-RS
napi = { version = "2.16", features = ["async", "tokio_rt", "napi8"] }
napi-derive = "2.16"

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Local crates
codegraph-core = { path = "../codegraph-core" }
codegraph-api = { path = "../codegraph-api" }
codegraph-graph = { path = "../codegraph-graph", features = [] }
codegraph-vector = { path = "../codegraph-vector" }
codegraph-ai = { path = "../codegraph-ai" }

# Optional cloud dependencies
surrealdb = { version = "2.0", optional = true }

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
strip = true
