
[package]
name = "codegraph-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
priority-queue = "2.5.0"
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
metrics = "0.24.2"

codegraph-concurrent = { path = "../codegraph-concurrent" }
