[package]
name = "codegraph-vector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vector storage and similarity search using FAISS for CodeGraph"

[dependencies]
codegraph-core = { workspace = true }
faiss = { workspace = true, optional = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
memmap2 = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
dashmap = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
approx = { workspace = true }
criterion = { workspace = true }
fastrand = { workspace = true }

[[bench]]
name = "knn_benchmark"
harness = false

[features]
default = []
faiss = ["dep:faiss"]
persistent = ["dep:memmap2", "dep:flate2"]
gpu = ["faiss/gpu"]