[package]
name = "codegraph-zerocopy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Zero-copy data structures and serialization for CodeGraph"

[dependencies]
# Core dependencies
codegraph-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Zero-copy serialization
rkyv = { workspace = true }
bytecheck = { workspace = true, optional = true }
rend = { workspace = true }

# Memory management
memmap2 = { workspace = true }
bytes = { workspace = true }
arc-swap = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
crossbeam-utils = { workspace = true }
crossbeam-queue = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[features]
default = ["validation"]
validation = ["dep:bytecheck"]
unsafe_fast = []
