[package]
name = "codegraph-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
codegraph-core = { workspace = true }
codegraph-api = { workspace = true }
axum = { workspace = true }
http = { workspace = true }

[dev-dependencies]
axum-test = "18.1"
serial_test = "3.0"
futures = { workspace = true }

[lib]
name = "cg_integration_test_support"
path = "src/lib.rs"

