[package]
name = "codegraph-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
tempfile = { workspace = true }
codegraph-core = { workspace = true }
codegraph-api = { workspace = true }
axum = { workspace = true }

axum-test = "18.2"
serial_test = "3.0"
futures = { workspace = true }

[dev-dependencies]

[lib]
name = "cg_integration_test_support"
path = "src/lib.rs"

